further UX tweaks, creates verticall-aligned-content css class, fixes bugs wuth adding and removing recipes and meal

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,9 @@
  */
 
 @import "bulma";
+
+.column.has-vertically-aligned-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
